# SPDX-FileCopyrightText: 2020-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "red-sculpin"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "1.3"

[features]
default = ["std"]
std = []

[dev-dependencies]
matches = "0.1.9"
